<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Always Charged</string>
    <string name="changelog">More updates are coming soon.  Please keep sending me your suggestions!\n
\n
v2.2.1\n
- Added a long-click context menu to alarm list\n
- Fixed a crash bug when hitting a key during alarm\n
v2.2\n
- Added an option in Pro version to cancel alarm if your battery is above a set level.\n
- Minor bug fixes.
\n
v2.1\n
- Fixed sound on some devices including Android 4.1\n
- Changed to alarm volume instead of ringer volume\n
\n
v2.0\n
- Added ability to upgrade to Pro to get new features:\n
  * Advanced settings\n
  * Multiple alarms\n
  * Repeat schedule by day\n
- All translations have been removed until I get a change to update\n
\n
v1.1.3\n
- Fixed bug that caused the alarm to go off 5 minutes early\n
- Fixed bug where vibrate would not always work when selected\n
- Fixed a bug with auto-snooze motion detection on some devices (including Galaxy Nexus)\n
- Updated notification messages to indicate why alarm was automatically snoozed.\n
- Added this change log\n
- Updated the Spanish translation using Google Translate Toolkit.  Please let me know if the translation is poor.\n
\n
v1.1.2\n
- Fixed a bug where some phones would list Unknown for Alarm Tone instead of just using the default\n
- Updated feedback email in menu\n
- Removed German due to poor translation\n
v1.1.1\n
- Fixed compatibility with Galaxy Nexus.\n
- Updated developer name to Dr Poindexter\n</string>

    <!-- <string name="app_name_no_spaces">AlwaysCharged</string> -->
    <string name="contact_email">developer@constructive-interference.com</string>
    <string name="default_snooze_time">5</string>
    <string name="default_motion_tolerance">4</string>
    <string name="default_alarm_duration">20</string>
    <string name="enable_alarm">Enable Charge Reminder</string>
    <string name="disable_alarm">Disable Charge Reminder</string>
    <string name="enable_alarm_summary">Sounds after bedtime only if phone is not charging and is motionless for 5 to 10 minutes</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="ringtone">Alarm Tone</string>
    <string name="vibrate">Vibrate</string>
    <string name="label">Label</string>
    <string name="snooze_time">Snooze Time</string>
    <string name="dialog_title_snooze">Snooze Time</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="until_alarm">until alarm</string>
    <string name="about">About</string>
    <string name="silent">Silent</string>
    <string name="unknown">Unknown</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="alarm_duration">Alarm Duration</string>
    <string name="dialog_title_duration">Alarm Duration</string>
    <string name="motion_tolerance">Motion Sensitivity</string>
    <string name="dialog_title_motion_tolerance">Motion Sensitivity</string>
    <string name="disabled">Disabled</string>
    <string name="degrees">Degrees</string>
    <string name="notification_toast">Click notification to dismiss alarm for tonight</string>
    <string name="feedback">Email Developer</string>
    <string name="sendmail">Send mail</string>
    <string name="noemail">There are no email clients installed.</string>
    <string name="alarm_message">Time to charge your phone!</string>
    <string name="snooze">Snooze</string>
    <string name="notify_init">Charge reminder.  Click to cancel.</string>
    <string name="notify_motion">Auto-snooze (movement).  Click to cancel.</string>
    <string name="notify_screen">Auto-snooze (screen on).  Click to cancel.</string>
    <string name="notify_phone">Auto-snooze (phone call).  Click to cancel.</string>
    <string name="notify_retry">Auto-snooze (retry).  Click to cancel.</string>
    <string name="notify_snooze">Alarm snoozed.  Click to cancel.</string>
    <string name="notify_power">Phone unplugged but still needs charged.  Click to cancel.</string>
    <string name="checkVolume">Ringer volume is set to zero, press volume keys to adjust.</string>
    <string name="upgrade_to_pro">Upgrade to Pro version</string>
    <string name="upgrade_summary">Schedule alarm repeating schedule, advanced settings,
         and more…</string>
    <string name="first_time_text">Have you ever forgotten to plug in your phone at night to find your
phone\'s battery dead the next day?  If so, then <i>Always Charged</i> is for you.
Just set the time to your regular bedtime, and if
you remember to plug in your phone, nothing will happen.  However, if you
forget, an alarm will sound, reminding you to charge your phone.\n\n

This is not just a simple alarm.  It waits patiently and silently snoozes the alarm
if you are using your phone, moving around, or already have it plugged in and charging.\n\n

This is a free app with enough functionality to evaluate its usefulness. If you want to setup an alert
to automatically repeat, set alerts for different times on different days, or change advanced settings,
then you can upgrade to the Pro version inside the app.\n\n

If you like or dislike something about this application, or you want to suggest a feature,
please send me an email (press the menu button from the main screen).</string>
    <string name="upgrade_dialog">Please upgrade Always Charged to take advantage of
new features:\n
  - Advanced Settings\n
  - Multiple alarms\n
  - Choose repeat schedule</string>
    <string name="close">Close</string>
    <string name="dontshowagain">Don\'t show again</string>
    <string name="done">Done</string>
    <string name="default_ringtone">Default</string>
    <string name="changelog_title">Change Log</string>
    <string name="set_alarm">Set alarms</string>
    <string name="add_alarm">Add alarm</string>
    <!-- alarm detail -->
    <string name="alarm_detail">Alarm Detail</string>
    <string name="turn_alarm_on">Turn alarm on</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="purchase">Purchase</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="never">Never</string>
    <string name="everyday">Everyday</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="cancel_battery">Skip alarm if battery charged</string>
    <string name="skipped_alarm_battery">Alarm skipped. Battery</string>
    <string name="percent">percent</string>

    <!-- Billing -->
    <string name="upgrade_pro">Upgrade to Pro</string>
    <string name="billing_not_supported_title">Can\'t make purchases</string>
    <string name="billing_not_supported_message">The Market billing
     service is not available at this time.  You can continue to use this app but you
     won\'t be able to make purchases.</string>
    <string name="learn_more">Learn more</string>
    <string name="help_url" formatted="false">http://market.android.com/support/bin/answer.py?answer=1050566&amp;hl=%lang%&amp;dl=%region%</string>
    <string name="cannot_connect_title">Can\'t connect to Market</string>
    <string name="cannot_connect_message">This app cannot connect to Market.
     Your version of Market may be out of date.
     You can continue to use this app but you
     won\'t be able to make purchases.</string>
    <string name="check_purchase">Checking for previous purchases.</string>
    <string name="downgrading">Pro upgrade has been refunded.  Disabling alarms.</string>
    <string name="pro_only">Pro only features</string>
    <string name="add_upgrade_dialog">Adding additional alarms requires an upgrade to Always Charged Pro.\n\n
         
         You can use the single, non-repeating alarm to test it out tonight.  If you think it is useful,
         then please upgrade to set repating options and add additional alarms for a different bedtimes
         throughout the week.</string>
    <string name="change_repeat_dialog">Changing the repeat option requires an upgrade to Always Charged Pro</string>
    <string name="advanced_upgrade_dialog">Changing advanced settings requires an upgrade to Always Charged Pro</string>
    <string name="trial_label"></string>

    <!-- Preference Keys -->
    <string name="key_skip_battery">key_skip_battery</string>
    <string name="default_skip_battery">0</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="rate_app">Rate app</string>

</resources>