<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:key="key_upgrade" android:title="@string/upgrade_to_pro"
        android:summary="@string/upgrade_summary" />
    
	<CheckBoxPreference android:key="key_alarm_enabled"
		android:title="@string/enable_alarm" android:summary="@string/enable_alarm_summary" 
		android:defaultValue="false" />
	
	<Preference android:key="key_set_alarm" android:title="@string/set_alarm" />

	<Preference android:key="key_advanced" android:title="@string/advanced_settings"
	    android:summary="" />
	
	<Preference android:key="key_time" android:title="@string/bed_time"
		android:summary="" />

	<RingtonePreference android:key="key_ringtone"
		android:title="@string/ringtone" android:summary="choose a ringtone"
		android:ringtoneType="ringtone|alarm" android:showDefault="false"
		android:showSilent="true"
		android:defaultValue="content://media/internal/audio/media/83" />

	<CheckBoxPreference android:key="key_vibrate"
		android:title="@string/vibrate"
		android:defaultValue="true" />
<!--	<CheckBoxPreference android:key="key_repeat"-->
<!--		android:title="@string/repeat" android:summary="@string/repeat_summary"-->
<!--		android:defaultValue="false" />-->
<!--	<ListPreference android:key="key_snooze" android:title="@string/snooze_time"-->
<!--		android:summary="" android:entries="@array/entries_snooze"-->
<!--		android:entryValues="@array/entryvalues_snooze" android:dialogTitle="@string/dialog_title_snooze"-->
<!--		android:defaultValue="10" />-->
	<Preference android:key="key_about" android:title="@string/about"></Preference>

</PreferenceScreen>