<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="key_checkbox"
        android:summary="@string/turn_alarm_on"
        android:title="@string/enable_alarm" />

    <Preference
        android:key="key_time"
        android:summary="hh:mm"
        android:title="@string/time" />

    <com.dexnamic.android.preference.ListPreferenceMultiSelect
        android:dialogTitle="Repeat"
        android:entries="@array/pref_days_of_week"
        android:entryValues="@array/pref_days_of_week_values"
        android:key="key_repeat"
        android:title="@string/repeat" />
    <RingtonePreference
        android:key="key_ringtone"
        android:summary=""
        android:title="@string/ringtone" />

    <CheckBoxPreference
        android:key="key_vibrate"
        android:title="@string/vibrate" />

    <EditTextPreference
        android:key="key_label"
        android:summary=""
        android:title="@string/label" />

</PreferenceScreen>