<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="key_checkbox"
        android:title="@string/enable_alarm" />

    <Preference
        android:key="key_time"
        android:summary="hh:mm"
        android:title="@string/time" />
    
    <Preference
        android:key="key_repeat"
        android:title="@string/repeat" />
    <RingtonePreference
        android:key="key_ringtone"
        android:summary=""
        android:title="@string/alarm_tone" />

    <CheckBoxPreference
        android:key="key_vibrate"
        android:title="@string/vibrate" />

    <EditTextPreference
        android:key="key_label"
        android:summary=""
        android:title="@string/label" />

</PreferenceScreen>